<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:id="@+id/fragment_relax">

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer2"
        android:textSize="36sp"
        android:textColor="@android:color/background_light"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/inhale_instructions"
        android:id="@+id/inhaleInstructionsTextView"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/inhaleTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/holdTextView"
        android:text="@string/hold"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/inhaleInstructionsTextView"
        android:layout_alignStart="@+id/inhaleInstructionsTextView"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/hold_instructions"
        android:id="@+id/holdInstructionsTextView"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/holdTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/exhaleTextView"
        android:text="@string/exhale"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/holdInstructionsTextView"
        android:layout_alignStart="@+id/holdInstructionsTextView"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/exhale_instructions"
        android:id="@+id/exhaleInstructionsTextView"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_below="@+id/exhaleTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/inhale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/inhaleTextView"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/repeatTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/repeatTextView"
        android:text="@string/repeat"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/chronometer2"
        android:layout_alignStart="@+id/inhaleInstructionsTextView" />

    <Button
        android:text="@string/again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relaxAgainButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>